--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -5,14 +5,35 @@
     background-color: white;
     display: flex;
     flex: 10;
+    border-radius: 10px;
 }
 
 .leftPanel {
     display: flex;
-    flex: 3;
+    flex: 2;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
 .rightPanel {
     display: flex;
-    flex: 7;
+    justify-content: space-between;
+    flex: 8;
+}
+
+.searchBar {
+    display: flex;
+}
+
+.searchField {
+    margin-right: 10px;
+}
+
+.favouritePlace {
+    display: flex;
+    column-gap: 20px;
+    background-color: rgb(109, 156, 197);
+    padding: 10px;
+    border-radius: 5px;
+    justify-content: space-between;
 }
